# compo-platform-loop

./: Cargo.toml  README-zh-CN.md  README.md  build.rs
examples/: hello.rs
examples/android/: Cargo.toml  README.md  run.bat  run.sh
examples/android/src/: MainActivity.java  lib.rs
examples/desktop/: Cargo.toml
examples/ios/: Cargo.toml  README.md
examples/ios/CompoPlatformLoopExample/: Info.plist  RustBinding.h
examples/ios/CompoPlatformLoopExample.xcodeproj/: project.pbxproj
examples/ios/CompoPlatformLoopExample/Base.lproj/: Main.storyboard
examples/ios/src/: lib.rs
src/: MainLoop.java  lib.rs  loop.rs  prelude.rs
