[package]
name = "compo-platform-loop-ios-example"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]

[target.'cfg(target_os = "ios")'.dependencies]
compo.workspace = true
compo-platform-loop.path = "../../"
objc2-foundation.workspace = true
tracing = {workspace = true, features = ["std"]}
tracing-subscriber.workspace = true
tracing-oslog.workspace = true
